# py-ibkr

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: parse_report.py
src/py_ibkr/: __init__.py  cli.py  vo.py
src/py_ibkr/flex/: __init__.py  client.py  enums.py  models.py  parser.py  utils.py
tests/: smoke_test.py  test_cli.py  test_client.py  test_integration.py  test_models.py  test_parser_utils.py
